tests/integrations/basic-fail/Cargo.stderr
   Compiler: rustc "--error-format=json"
   Building test dependencies...
tests/actual_tests/bad_pattern.rs ... FAILED
tests/actual_tests/executable.rs ... FAILED
tests/actual_tests/executable_compile_err.rs ... FAILED
tests/actual_tests/exit_code_fail.rs ... FAILED
tests/actual_tests/filters.rs ... FAILED
tests/actual_tests/foomp.rs ... FAILED

tests/actual_tests/bad_pattern.rs FAILED:
command: "rustc" "--error-format=json" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "--out-dir" "$TMP "tests/actual_tests/bad_pattern.rs" "--edition" "2021"

substring `miesmätsched types` not found in stderr output
expected because of pattern here: tests/actual_tests/bad_pattern.rs:5

There were 1 unmatched diagnostics at tests/actual_tests/bad_pattern.rs:4
    Error: mismatched types

full stderr:
error[E0308]: mismatched types
 --> tests/actual_tests/bad_pattern.rs:4:9
  |
4 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> $DIR/$DIR/src/lib.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.



tests/actual_tests/executable.rs FAILED:
command: "$CMD"

actual output differed from expected
--- tests/actual_tests/executable.stdout
+++ <stderr output>
-69
+42
 


full stderr:



tests/actual_tests/executable_compile_err.rs FAILED:
command: "rustc" "--error-format=json" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "--out-dir" "$TMP "tests/actual_tests/executable_compile_err.rs" "--edition" "2021"

run(0) test got exit status: 1, but expected 0

actual output differed from expected
--- tests/actual_tests/executable_compile_err.stderr
+++ <stderr output>
+error: this file contains an unclosed delimiter
+ --> $DIR/executable_compile_err.rs:4:2
+  |
+3 | fn main() {
+  |           - unclosed delimiter
+4 |
+  |  ^
+
+error: aborting due to previous error
+
+


There were 1 unmatched diagnostics at tests/actual_tests/executable_compile_err.rs:4
    Error: this file contains an unclosed delimiter

full stderr:
error: this file contains an unclosed delimiter
 --> tests/actual_tests/executable_compile_err.rs:4:2
  |
3 | fn main() {
  |           - unclosed delimiter
4 |
  |  ^

error: aborting due to previous error




tests/actual_tests/exit_code_fail.rs FAILED:
command: "rustc" "--error-format=json" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "--out-dir" "$TMP "tests/actual_tests/exit_code_fail.rs" "--edition" "2021"

fail test got exit status: 0, but expected 1

no error patterns found in fail test

full stderr:



tests/actual_tests/filters.rs FAILED:
command: "parse comments"

Could not parse comment in tests/actual_tests/filters.rs:1 because
`x86_64` is not a valid condition, expected `on-host`, /[0-9]+bit/, /host-.*/, or /target-.*/

full stderr:



tests/actual_tests/foomp.rs FAILED:
command: "rustc" "--error-format=json" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "--out-dir" "$TMP "tests/actual_tests/foomp.rs" "--edition" "2021"

actual output differed from expected
--- tests/actual_tests/foomp.stderr
+++ <stderr output>
... 3 lines skipped ...
 4 |     add("42", 3);
   |     --- ^^^^ expected `usize`, found `&str`
+  |     |
+  |     arguments to this function are incorrect
   |
 note: function defined here
~ --> $DIR/$DIR/src/lib.rs:1:8
   |
 1 | pub fn add(left: usize, right: usize) -> usize {
~  |        ^^^ some expected text that isn't in the actual message░
 
-error: aborting doo to previous error
+error: aborting due to previous error
 
 For more information about this error, try `rustc --explain E0308`.
 


full stderr:
error[E0308]: mismatched types
 --> tests/actual_tests/foomp.rs:4:9
  |
4 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> $DIR/$DIR/src/lib.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.


FAILURES:
    tests/actual_tests/bad_pattern.rs
    tests/actual_tests/executable.rs
    tests/actual_tests/executable_compile_err.rs
    tests/actual_tests/exit_code_fail.rs
    tests/actual_tests/filters.rs
    tests/actual_tests/foomp.rs

test result: FAIL. 6 tests failed, 0 tests passed, 0 ignored, 0 filtered out
Error: tests failed

Location:
    $DIR/src/lib.rs:603:9
error: test failed, to rerun pass `--test ui_tests`

Caused by:
  process didn't exit successfully: `$DIR/target/debug/ui_tests-HASH --test-threads 1` (exit status: 1)
   Compiler: rustc "--error-format=json"
   Building test dependencies...
tests/actual_tests_bless/aux_proc_macro_misuse.rs ... FAILED
tests/actual_tests_bless/compiletest-rs-command.rs ... FAILED
tests/actual_tests_bless/failing_executable.rs ... FAILED
tests/actual_tests_bless/foomp-rustfix-fail-revisions.rs (a) ... FAILED
tests/actual_tests_bless/foomp-rustfix-fail-revisions.rs (b) ... FAILED
tests/actual_tests_bless/foomp-rustfix-fail.rs ... FAILED
tests/actual_tests_bless/foomp_aux.rs ... ok
tests/actual_tests_bless/non_top_level_configs.rs ... FAILED
tests/actual_tests_bless/pass.rs ... ok
tests/actual_tests_bless/revised_revision.rs ... FAILED
tests/actual_tests_bless/revisioned_executable.rs (run) ... ok
tests/actual_tests_bless/revisioned_executable.rs (panic) ... FAILED
tests/actual_tests_bless/revisioned_executable_panic.rs (run) ... FAILED
tests/actual_tests_bless/revisioned_executable_panic.rs (panic) ... FAILED
tests/actual_tests_bless/revisions.rs (foo) ... ok
tests/actual_tests_bless/revisions.rs (bar) ... ok
tests/actual_tests_bless/revisions_bad.rs (foo) ... ok
tests/actual_tests_bless/revisions_bad.rs (bar) ... FAILED
tests/actual_tests_bless/revisions_filter.rs (foo) ... ignored (in-test comment)
tests/actual_tests_bless/revisions_filter.rs (bar) ... ignored (in-test comment)
tests/actual_tests_bless/revisions_filter2.rs (foo) ... ignored (in-test comment)
tests/actual_tests_bless/revisions_filter2.rs (bar) ... ok
tests/actual_tests_bless/revisions_multiple_per_annotation.rs (foo) ... ok
tests/actual_tests_bless/revisions_multiple_per_annotation.rs (bar) ... ok
tests/actual_tests_bless/revisions_same_everywhere.rs (foo) ... ok
tests/actual_tests_bless/revisions_same_everywhere.rs (bar) ... ok

tests/actual_tests_bless/aux_proc_macro_misuse.rs FAILED:
command: "rustc" "--error-format=json" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "--out-dir" "$TMP "tests/actual_tests_bless/auxiliary/the_proc_macro.rs" "--edition" "2021" "--crate-type" "lib" "--emit=link"

Aux build from tests/actual_tests_bless/aux_proc_macro_misuse.rs:1 failed
compilation of aux build failed failed with exit status: 1


full stderr:
error: the `#[proc_macro]` attribute is only usable with crates of the `proc-macro` crate type
 --> tests/actual_tests_bless/auxiliary/the_proc_macro.rs:7:1
  |
7 | #[proc_macro]
  | ^^^^^^^^^^^^^

error: aborting due to previous error




tests/actual_tests_bless/compiletest-rs-command.rs FAILED:
command: "parse comments"

Could not parse comment in tests/actual_tests_bless/compiletest-rs-command.rs:1 because
a compiletest-rs style comment was detected.
Please use text that could not also be interpreted as a command,
and prefix all actual commands with `//@`

Could not parse comment in tests/actual_tests_bless/compiletest-rs-command.rs:2 because
a compiletest-rs style comment was detected.
Please use text that could not also be interpreted as a command,
and prefix all actual commands with `//@`

Could not parse comment in tests/actual_tests_bless/compiletest-rs-command.rs:4 because
comment looks suspiciously like a test suite command: `@aux-build:asldkfjasldfj.rs`
All `//@` test suite commands must be at the start of the line.
The `//` must be directly followed by `@` or `~`.

full stderr:



tests/actual_tests_bless/failing_executable.rs FAILED:
command: "$CMD"

run(0) test got exit status: 101, but expected 0

full stderr:



tests/actual_tests_bless/foomp-rustfix-fail-revisions.rs (revision `a`) FAILED:
command: "rustc" "--error-format=json" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "--out-dir" "$TMP "tests/actual_tests_bless/foomp-rustfix-fail-revisions.a.fixed" "--cfg=a" "--edition" "2021" "--crate-name" "foomp_rustfix_fail_revisions"

rustfix failed with exit status: 1

full stderr:
error[E0308]: mismatched types
 --> tests/actual_tests_bless/foomp-rustfix-fail-revisions.a.fixed:6:21
  |
6 |     let x: String = 42;
  |            ------   ^^- help: try using a conversion method: `.to_string()`
  |            |        |
  |            |        expected struct `String`, found integer
  |            expected due to this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.



tests/actual_tests_bless/foomp-rustfix-fail-revisions.rs (revision `b`) FAILED:
command: "rustc" "--error-format=json" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "--out-dir" "$TMP "tests/actual_tests_bless/foomp-rustfix-fail-revisions.b.fixed" "--cfg=b" "--edition" "2021" "--crate-name" "foomp_rustfix_fail_revisions"

rustfix failed with exit status: 1

full stderr:
error[E0308]: mismatched types
 --> tests/actual_tests_bless/foomp-rustfix-fail-revisions.b.fixed:6:21
  |
6 |     let x: String = 42;
  |            ------   ^^- help: try using a conversion method: `.to_string()`
  |            |        |
  |            |        expected struct `String`, found integer
  |            expected due to this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.



tests/actual_tests_bless/foomp-rustfix-fail.rs FAILED:
command: "rustc" "--error-format=json" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "--out-dir" "$TMP "tests/actual_tests_bless/foomp-rustfix-fail.fixed" "--edition" "2021" "--crate-name" "foomp_rustfix_fail"

rustfix failed with exit status: 1

full stderr:
error[E0308]: mismatched types
 --> tests/actual_tests_bless/foomp-rustfix-fail.fixed:5:21
  |
5 |     let x: String = 42;
  |            ------   ^^- help: try using a conversion method: `.to_string()`
  |            |        |
  |            |        expected struct `String`, found integer
  |            expected due to this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.



tests/actual_tests_bless/non_top_level_configs.rs FAILED:
command: "parse comments"

Could not parse comment in tests/actual_tests_bless/non_top_level_configs.rs:1 because
comment looks suspiciously like a test suite command: `@check-pass`
All `//@` test suite commands must be at the start of the line.
The `//` must be directly followed by `@` or `~`.

Could not parse comment in tests/actual_tests_bless/non_top_level_configs.rs:4 because
comment looks suspiciously like a test suite command: `@ignore-target-cheesecake`
All `//@` test suite commands must be at the start of the line.
The `//` must be directly followed by `@` or `~`.

full stderr:



tests/actual_tests_bless/revised_revision.rs FAILED:
command: "parse comments"

Could not parse comment in tests/actual_tests_bless/revised_revision.rs:2 because
revisions cannot be declared under a revision

full stderr:



tests/actual_tests_bless/revisioned_executable.rs (revision `panic`) FAILED:
command: "rustc" "--error-format=json" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "--out-dir" "$TMP "tests/actual_tests_bless/revisioned_executable.rs" "--cfg=panic" "--edition" "2021"

run(101) test got exit status: 0, but expected 101

full stderr:



tests/actual_tests_bless/revisioned_executable_panic.rs (revision `run`) FAILED:
command: "$CMD"

run(0) test got exit status: 101, but expected 0

full stderr:



tests/actual_tests_bless/revisioned_executable_panic.rs (revision `panic`) FAILED:
command: "rustc" "--error-format=json" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "--out-dir" "$TMP "tests/actual_tests_bless/revisioned_executable_panic.rs" "--cfg=panic" "--edition" "2021"

run(101) test got exit status: 0, but expected 101

full stderr:



tests/actual_tests_bless/revisions_bad.rs (revision `bar`) FAILED:
command: "rustc" "--error-format=json" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail.rlib" "--extern" "basic_fail=$DIR/$DIR/../../../target/$TRIPLE/debug/libbasic_fail-$HASH.rmeta" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "-L" "$DIR/$DIR/../../../target/$TRIPLE/debug" "--out-dir" "$TMP "tests/actual_tests_bless/revisions_bad.rs" "--cfg=bar" "--edition" "2021"

substring ``main` function not found in crate `revisions_bad`` not found in stderr output
expected because of pattern here: tests/actual_tests_bless/revisions_bad.rs:4

There were 1 unmatched diagnostics at tests/actual_tests_bless/revisions_bad.rs:10
    Error: `main` function not found in crate `revisions_bad`

full stderr:
error[E0601]: `main` function not found in crate `revisions_bad`
  --> tests/actual_tests_bless/revisions_bad.rs:10:2
   |
10 | }
   |  ^ consider adding a `main` function to `tests/actual_tests_bless/revisions_bad.rs`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.


FAILURES:
    tests/actual_tests_bless/aux_proc_macro_misuse.rs
    tests/actual_tests_bless/compiletest-rs-command.rs
    tests/actual_tests_bless/failing_executable.rs
    tests/actual_tests_bless/foomp-rustfix-fail-revisions.rs
    tests/actual_tests_bless/foomp-rustfix-fail-revisions.rs
    tests/actual_tests_bless/foomp-rustfix-fail.rs
    tests/actual_tests_bless/non_top_level_configs.rs
    tests/actual_tests_bless/revised_revision.rs
    tests/actual_tests_bless/revisioned_executable.rs
    tests/actual_tests_bless/revisioned_executable_panic.rs
    tests/actual_tests_bless/revisioned_executable_panic.rs
    tests/actual_tests_bless/revisions_bad.rs

test result: FAIL. 12 tests failed, 11 tests passed, 3 ignored, 0 filtered out
Error: tests failed

Location:
    $DIR/src/lib.rs:603:9
error: test failed, to rerun pass `--test ui_tests_bless`

Caused by:
  process didn't exit successfully: `$DIR/target/debug/ui_tests_bless-HASH --test-threads 1` (exit status: 1)
   Compiler: invalid_foobarlaksdfalsdfj
Error: failed to parse rustc version info: invalid_foobarlaksdfalsdfj

Caused by:



Location:
    $DIR/src/lib.rs:176:21
error: test failed, to rerun pass `--test ui_tests_invalid_program`

Caused by:
  process didn't exit successfully: `$DIR/target/debug/ui_tests_invalid_program-HASH --test-threads 1` (exit status: 1)
   Compiler: invalid_foobarlaksdfalsdfj
thread '<unnamed>' panicked at 'could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/bad_pattern.rs" "--edition" "2021"', $DIR/src/lib.rs
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
tests/actual_tests/bad_pattern.rs ... FAILED
thread '<unnamed>' panicked at 'could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/executable.rs" "--edition" "2021"', $DIR/src/lib.rs
tests/actual_tests/executable.rs ... FAILED
thread '<unnamed>' panicked at 'could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/executable_compile_err.rs" "--edition" "2021"', $DIR/src/lib.rs
tests/actual_tests/executable_compile_err.rs ... FAILED
thread '<unnamed>' panicked at 'could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/exit_code_fail.rs" "--edition" "2021"', $DIR/src/lib.rs
tests/actual_tests/exit_code_fail.rs ... FAILED
tests/actual_tests/filters.rs ... FAILED
thread '<unnamed>' panicked at 'could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/foomp.rs" "--edition" "2021"', $DIR/src/lib.rs
tests/actual_tests/foomp.rs ... FAILED

tests/actual_tests/bad_pattern.rs FAILED:
command: "<unknown>"

A bug in `ui_test` occurred: could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/bad_pattern.rs" "--edition" "2021"

full stderr:



tests/actual_tests/executable.rs FAILED:
command: "<unknown>"

A bug in `ui_test` occurred: could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/executable.rs" "--edition" "2021"

full stderr:



tests/actual_tests/executable_compile_err.rs FAILED:
command: "<unknown>"

A bug in `ui_test` occurred: could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/executable_compile_err.rs" "--edition" "2021"

full stderr:



tests/actual_tests/exit_code_fail.rs FAILED:
command: "<unknown>"

A bug in `ui_test` occurred: could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/exit_code_fail.rs" "--edition" "2021"

full stderr:



tests/actual_tests/filters.rs FAILED:
command: "parse comments"

Could not parse comment in tests/actual_tests/filters.rs:1 because
`x86_64` is not a valid condition, expected `on-host`, /[0-9]+bit/, /host-.*/, or /target-.*/

full stderr:



tests/actual_tests/foomp.rs FAILED:
command: "<unknown>"

A bug in `ui_test` occurred: could not execute "invalid_foobarlaksdfalsdfj" "tests/actual_tests/foomp.rs" "--edition" "2021"

full stderr:


FAILURES:
    tests/actual_tests/bad_pattern.rs
    tests/actual_tests/executable.rs
    tests/actual_tests/executable_compile_err.rs
    tests/actual_tests/exit_code_fail.rs
    tests/actual_tests/filters.rs
    tests/actual_tests/foomp.rs

test result: FAIL. 6 tests failed, 0 tests passed, 0 ignored, 0 filtered out
Error: tests failed

Location:
    $DIR/src/lib.rs:603:9
error: test failed, to rerun pass `--test ui_tests_invalid_program2`

Caused by:
  process didn't exit successfully: `$DIR/target/debug/ui_tests_invalid_program2-HASH --test-threads 1` (exit status: 1)
error: 4 targets failed:
    `--test ui_tests`
    `--test ui_tests_bless`
    `--test ui_tests_invalid_program`
    `--test ui_tests_invalid_program2`
